[project]
name = "survival"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pahita", email = "pahitass@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
survival = "survival.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["survival"]
